--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,81 @@
 body {
-    padding-top: 5rem;
+  padding: 0;
+  padding-top: 3.5rem;
+  margin: 0;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    "Helvetica", "Arial", sans-serif;
+  font-size: 16px;
+}
+
+.first-container {
+  padding-top: 8px;
+  padding: 15px 0;
+  font-size: 14px;
+  line-height: 15px;
+  color: white;
+  /* background-color: rgb(53, 129, 53); */
+  background: radial-gradient(#55c75d, #00a444);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto calc(50% - 50vw); /*breaking this element out of the margin of the main conatainer*/
+}
+
+.first-container h2 {
+  font-size: 25px;
+  text-shadow: 2px 2px 8px #555555;
+}
+
+.first-container p {
+  text-shadow: 2px 2px 8px #555555;
+  line-height: 12px;
+}
+
+.profile-img {
+  padding: 10px 0;
+  width: 200px;
+  filter: drop-shadow(0 0 0.6rem rgba(79, 79, 79, 0.681));
+}
+
+.second-container {
+  display: flex;
+  flex-direction: column;
+  padding: 15px 90px;
+  align-items: center;
+}
+
+.stats-box {
+  /* padding: 8px 60px; */
+  padding: 20px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 30px;
+  text-align: center;
+  line-height: 10px;
+}
+
+.stats-box div p:first-child {
+  font-weight: bold;
+  font-size: large;
+}
+
+.stats-box div p:nth-child(2) {
+  color: rgb(109, 109, 109);
+}
+
+.button-box {
+  align-items: center;
+}
+
+button {
+  text-align: center;
+  padding: 5px 35px;
+  color: white;
+  font-weight: bold;
+  background-color: rgb(118, 221, 1);
+  border: none;
+  border-radius: 0.5em;
 }
