Implemented format_date_joined function in views.py and profile.html

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -10,7 +10,7 @@
       <h2>Roschelle Matthews-Rhoden</h2>
       <p>@roschellemr</p>
       <p>Kingston, Jamaica</p>
-      <p>Joined February, 2022</p>
+      <p>{{ date_joined }}</p>
     </div>
   </div>
 
